[gd_scene load_steps=9 format=3 uid="uid://dlml4wf058xvd"]

[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_8h1nv"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="2_px5rc"]
[ext_resource type="Script" path="res://Scripts/GraphNodes/TimerNode.gd" id="3_elv8q"]
[ext_resource type="StyleBox" uid="uid://bmb6fo20hn20m" path="res://Assets/NodeValue.stylebox" id="4_a3tl2"]

[sub_resource type="Theme" id="Theme_llmqa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcq14"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2f44r"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.337255, 0.631373, 0.788235, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_v4ya3"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="TimerNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 157.0
offset_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_llmqa")
theme_override_styles/panel = SubResource("StyleBoxFlat_bcq14")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_2f44r")
title = "TimerNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_8h1nv")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_px5rc")
slot/0/draw_stylebox = false
script = ExtResource("3_elv8q")

[node name="TimerContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="TimerContainer"]
layout_mode = 2
mouse_filter = 2

[node name="WaitLabel" type="Label" parent="TimerContainer/HBox"]
layout_mode = 2
text = "Wait"

[node name="TimerLabel" type="Label" parent="TimerContainer/HBox"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_a3tl2")
text = "0"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="SecondsLabel" type="Label" parent="TimerContainer/HBox"]
layout_mode = 2
text = "seconds"
